P4ADEV-975_implement createUser API
